--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ pagination:
   enabled: true
 ---
 
+<form action="/search.html" method="get">
+  <input type="text" id="search-box" name="query" class="form-control input-lg", placeholder="search: type and then hit enter">
+</form>
+
 {% for episode in paginator.posts %}
   {% assign slug = episode.id | split: '/' | last %}
   <div class="episode">
