passes slug to search for consitent data display

--- a/search.html
+++ b/search.html
@@ -10,7 +10,9 @@ layout: default
 <script>
   window.store = [
     {% for episode in site.episodes %}
+      {% assign slug = episode.id | split: '/' | last %}
       {
+        "slug": {{ slug | jsonify }},
         "title": {{ episode.title | jsonify }},
         "description": {{ episode.description | strip | jsonify }},
         "date": {{ episode.date | split: " " | first | jsonify }},
