ok, I am done tweaking tiny little details in the about page

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ layout: default
 
   <h3>There's an API?!</h3>
 
-  <p>I use the label of "API" very loosely here. I think more accurately this section should probably be called "end-point" because that's all you get: one dumb end-point.</p>
+  <p>I use the label "API" very loosely here. I think more accurately this section should probably be called "End-Point" because that's all you get: one dumb end-point.</p>
 
   <p><a href="/api.json" target="_blank">{{ site.url }}/api.json</a></p>
 
@@ -50,7 +50,7 @@ layout: default
 },...]
   </pre>
 
-  <p>Currently, it's every episode in one big dump, but it <em>is</em> valid json and can be parsed as such. Eventually, I want to add a couple url params for search, pagination, and probably single episodes. We'll see. Turns out, I think this shit is fun. What a world!</p>
+  <p>It's literally just every episode in one big dumb dump, but it <em>is</em> valid json and can be parsed as such. Eventually, I want to add a couple url params for search, pagination, and probably single episodes. We'll see. Turns out, I think this shit is fun. What a world!</p>
 
   <p>Hope you enjoy,</p>
 
