better code line breaks in search form

--- a/search.html
+++ b/search.html
@@ -2,7 +2,13 @@
 layout: default
 ---
 <form action="/search.html" method="get">
-  <input type="text" id="search-box" name="query" class="form-control input-lg", placeholder="search: type and then hit enter">
+  <input
+    type="text"
+    id="search-box"
+    name="query"
+    class="form-control input-lg",
+    placeholder="search: type and then hit enter"
+  >
 </form>
 
 <ul id="search-results" class="list list-unstyled"></ul>
