small tweaks to api and about

--- a/about.html
+++ b/about.html
@@ -24,6 +24,9 @@ layout: default
 
   <pre>
 [{
+  "number": 0,
+  "why": "so that array[1] will return episode 1, array[2] returns episode 2, etc"
+},{
   "number": 1,
   "date": "1995-11-17",
   "title": "New Beginnings",
