--- a/search.html
+++ b/search.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Search
+description: Find your favorite episodes of This American Life
 ---
 <form action="/search.html" method="get">
   <input
