better looking api link on about page

--- a/about.html
+++ b/about.html
@@ -53,7 +53,9 @@ layout: default
 },...]
   </pre>
 
-  <p><a href="/api.json" target="_blank">{{ site.url }}/api.json</a></p>
+  <p class="api-link">
+    <a href="/api.json" target="_blank">{{ site.url }}/api.json</a>
+  </p>
 
   <p>It's literally just every episode in one big dumb dump, but it <em>is</em> valid json and can be parsed as such. Eventually, I want to add a couple url params for search, pagination, and probably single episodes. We'll see. Turns out, I think this shit is fun. What a world!</p>
 
