A few episode layout tweaks and some copy changes to seeds.rb

--- a/_episodes/0304.html
+++ b/_episodes/0304.html
@@ -4,6 +4,6 @@ number: 304
 slug: "0304"
 title: Heretics
 description: >
-  The story of Reverend Carlton Pearson, a renowned evangelical pastor in Tulsa, Oklahoma, who cast aside the idea of Hell, and with it everything he'd worked for over his entire life.
+  The story of Reverend Carlton Pearson. He was a rising star in the evangelical movement when he cast aside the idea of hell and, with it, everything he'd worked for over his entire life.
 date: 2005-12-16
 ---
