Does this fix it?

--- a/_episodes/0860.html
+++ b/_episodes/0860.html
@@ -2,7 +2,8 @@
 layout: episode
 number: 860
 slug: "0860"
-title: Suddenly: A Mirror!
+title: >
+  Suddenly: A Mirror!
 description: >
   A show about people who are suddenly confronted with who they are.
 date: 2025-05-23
